엘라스틱 인터페이스 등록

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
+
+elasticsearch.host=1.234.25.132
+elasticsearch.port=9200
+commute_template_name=direa_erp_commute_template
