--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,20 @@
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
         </dependency>
+        
+        <!-- vo라이브러리 -->
+        <dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		
+        <!-- Elastic client API  -->
+        <dependency>
+    		<groupId>org.elasticsearch.client</groupId>
+    		<artifactId>elasticsearch-rest-high-level-client</artifactId>
+    		<version>7.5.1</version>
+		</dependency>
     </dependencies>
 
     <build>
