Port 번호 변경 및 총 Row 수 출력

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ elasticsearch.port=9200
 commute_template_name=direa_erp_commute_template 
 
 spring.servlet.multipart.enabled=true
+
+server.port=18090
